# tree-sitter-i3config

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-i3config.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_i3config/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterI3Config/: i3config.h
bindings/swift/TreeSitterI3ConfigTests/: TreeSitterI3ConfigTests.swift
examples/: config
lua/: i3config.lua
queries/i3config/: highlights.scm
src/: grammar.json  node-types.json  parser.c
